--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="guest_name">Konuk Adı</string>
     <string name="guest_surname">Konuk Soyadı</string>
     <string name="guest_phone">Konuk Telefonu</string>
+    <string name="remember_me">Hatırla Beni !</string>
 </resources>
